==== gedit 2.12.1 ====

==== gedit 2.12.0 ====

==== gedit 2.11.93 ====

==== gedit 2.11.92 ====

==== gedit 2.11.91 ====

2005-08-08  Paolo Borelli  <pborelli@katamail.com>

	spell/gedit-spell-checker.c: fix potential crash.

2005-08-08  Paolo Borelli  <pborelli@katamail.com>

	spell/gedit-spell-checker.c: add Marathi.

2005-08-04  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #302376: Some typos in the gedit .po file

	* taglist/HTML.tags.xml.in: fixed typo

	* taglist/Latex.tags.xml.in: fixed typos

2005-08-04  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #308816: Misspelled word ("mispelled [sic]") in gedit spell 
	checker dialog
	
	* spell/spell-checker.glade2: s/Mispelled/Misspelled

==== gedit 2.10.4 ====

2005-08-04  Paolo Maggi  <paolo@gnome.org>

	* docinfo/docinfo.c (word_count_real): ellipsize and escape file
	name

2005-08-02  Paolo Borelli  <pborelli@katamail.com>

	* sacecopy/savecopy.c: use the same permission as the original
	file (bug #169816).

2005-07-29  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #166350 (Gedit crashed when insert date and time)

	* time/time.c (get_format_from_list): return 0 if no format
	is selected (should never happen). 

2005-07-24  Paolo Borelli  <pborelli@katamail.com>

	* sample/sample.c: check the right pointer. Patch from Ike Gingerich.

==== gedit 2.10.3 ====

==== gedit 2.10.2 ====

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* spell/gedit-spell-checker.c:
	* taglist/gedit-taglist-plugin-parser.c: fix gcc 2.95 compilation,
	patch by Jens Granseuer.

==== gedit 2.10.1 ====

==== gedit 2.10.0 ====

==== gedit 2.9.7 ====

2005-02-13  Paolo Maggi  <paolo@gnome.org>

	* taglist/HTML.tags.xml.in: fixed bug #167106 (Cryptic "Script execution defer" 
	message in gedit), replaces cryptic message with "Defer attribute", added a 
	comment for translators.

2005-02-11  Paolo Borelli  <pborelli@katamail.com>

	* time/time.c: fix crash when the format in gconf is not valid.
	* taglist/HTML.tags.xml.in: fix strings.
