@@ -1,3 +1,8 @@
+2005-10-26  Anilkumar Bacheli  <anilkumar.bacheli@wipro.com>
+
+	spell/gedit-spell-language-dialog.c (dialog_response_handler): handle
+	help button press.
+
 ==== gedit 2.12.1 ====
 
 ==== gedit 2.12.0 ====
